# eternal-clash

./: README.md  record.webm  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/app/eternal/clash/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: main.cpp
app/src/main/java/app/eternal/clash/: MainActivity.kt
app/src/main/java/org/libsdl/app/: HIDDevice.java  HIDDeviceBLESteamController.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/app/eternal/clash/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
